--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "bitstring": "^1.0.0",
     "buffer": "^6.0.3",
     "bulma": "^0.9.3",
@@ -36,6 +39,7 @@
     "react-select": "^4.3.1",
     "react-table": "^7.7.0",
     "sass": "^1.35.1",
+    "typescript": "^4.3.4",
     "use-query-params": "^1.2.0",
     "workerize-loader": "^1.3.0",
     "wretch": "^1.7.4"
@@ -78,6 +82,8 @@
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.0",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
