--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "dev:start": ". ./.env && react-scripts start",
     "dev:coverage": "npm run travis:test -- --coverage --watchAll=false",
     "dev:compress": "npx gzipper c --brotli --exclude png,ico,webp,gz,br ./build && npx gzipper c --level 9 --exclude png,ico,webp,gz,br ./build",
-    "dev:webp": "node src/dev/webp.js",
+    "dev:webp": "node src/dev/webp.mjs",
     "dev:analyze": "source-map-explorer 'build/static/js/*.js' --html coverage/src_map_explorer.html",
     "dev:bump": "node bump.js",
     "dev:format": "npx prettier . --write && npx eslint src/ --fix",
